# vectordb

./: .gitignore  LICENSE  README.md  VERSION
engine/: .gitignore  API_DOCUMENTATION.md  API_TESTING_GUIDE.md  CHINESE_TO_ENGLISH_COMMENTS_REPORT.md  CLAUDE.md  CMakeLists.txt  CRITICAL_FIXES_2024.md  DYNAMIC_MEMORY_CONFIG.md  Dockerfile  Dockerfile.base  Dockerfile.embed  HARDCODED_150000_FIX_REPORT.md  INITIAL_CAPACITY_5000_DONE.md  MEMORY_SAFETY_FIXES.md  SECURITY_ANALYSIS.md  build-macos.sh  build.sh  demo_hard_delete.sh  main.cpp  run_api_tests.sh  test.sh  test_api_example.sh  test_data_safety.sh  test_hard_delete_safety.sh  test_wal_auto_flush.sh
engine/.github/workflows/: ci.yml
engine/bindings/python/: interface.cpp  interface.h
engine/catalog/: meta.hpp  meta_types.hpp
engine/cmd/server/: main.cpp
engine/cmd/test/: main.cpp
engine/config/: advanced_config.cpp  advanced_config.hpp  config.hpp  config_integration.hpp  config_schema.hpp
engine/db/: adaptive_compactor.hpp  ann_graph_segment.cpp  ann_graph_segment.hpp  batch_insertion_optimizer.hpp  binary_protocol.hpp  compaction_manager.cpp  compaction_manager.hpp  concurrent_operations.hpp  config_manager.hpp  database.cpp  database.hpp  database_new.hpp  db.hpp  db_mvp.cpp  db_mvp.cpp.backup  db_mvp.hpp  db_mvp.hpp.backup  db_server.cpp  db_server.hpp  dynamic_memory_block.hpp  dynamic_segment.hpp  fine_grained_db_manager.hpp  incremental_compactor.hpp  insertion_rate_monitor.hpp  memory_pool_manager.hpp  optimized_rebuild_executor.hpp  parallel_index_builder.hpp  query_plan_cache.hpp  rebuild_manager.hpp  safe_data_structures.hpp  segment_manager.cpp  segment_manager.hpp  sparse_vector.cpp  sparse_vector.hpp  table.cpp  table.hpp  table_mvp.cpp  table_mvp.cpp.backup  table_mvp.hpp  table_mvp.hpp.backup  (+17 more)
engine/db/catalog/: basic_meta_impl.cpp  basic_meta_impl.hpp  meta.cpp  meta.hpp  meta_types.hpp
engine/db/compaction/: cow_compactor.hpp
engine/db/execution/: aggregation.hpp  candidate.hpp  executor_pool.hpp  optimized_executor_pool.hpp  simple_logger.hpp  standalone_worker_pool.hpp  vec_search_executor.cpp  vec_search_executor.hpp  worker_pool.hpp  worker_pool_example.cpp
engine/db/index/: README_SIMD.md  base_index.hpp  distance_simd.cpp  distances.cpp  distances.hpp  enhanced_index_manager.hpp  index.cpp  index.hpp  index_factory.cpp  index_prewarmer.hpp  index_selector.cpp  index_selector.hpp  index_types.cpp  index_types.hpp  ivf_index.cpp  ivf_index.hpp  memory_optimizer.hpp  nsg_index.cpp  nsg_index.hpp  platform_macros.hpp  pq_index.cpp  pq_index.hpp  simd_config.hpp  simdlib.hpp  simdlib_avx2.hpp  simdlib_emulated.hpp  simdlib_neon.hpp  space_cosine.hpp  space_ip.hpp  space_l2.hpp  transpose-avx2-inl.hpp
engine/db/index/knn/: knn.hpp  nndescent.hpp  nndescent_common.hpp
engine/db/index/nsg/: distance.cpp  distance.hpp  neighbor.hpp  nsg.cpp  nsg.hpp  nsg_helper.cpp  nsg_helper.hpp
engine/db/index/spatial/: geoindex.cpp  geoindex.hpp
engine/db/wal/: wal_group_commit.hpp  wal_manager.hpp  write_ahead_log.hpp
engine/logger/: logger.cpp  logger.hpp
engine/query/: query.hpp
engine/query/expr/: expr.cpp  expr.hpp  expr_evaluation.cpp  expr_evaluation.hpp  expr_evaluator.cpp  expr_evaluator.hpp  expr_types.hpp
engine/scripts/: heartbeat.sh  install_oatpp_modules.sh  run_coverage.sh  setup-dev.sh  valgrind.suppressions
engine/security/: auth_manager.hpp  input_validator.hpp  secure_config.hpp
engine/server/: server.cpp  server.hpp
engine/server/db_server/: db_server.cpp  db_server.hpp
engine/server/fulltext/: fulltext_engine.hpp  fulltext_manager.cpp  fulltext_manager.hpp  hybrid_search_engine.hpp  hybrid_search_with_delete_filter.hpp
engine/server/fulltext/implementations/quickwit/: quickwit_client.cpp  quickwit_client.hpp  quickwit_engine.cpp  quickwit_engine.hpp  quickwit_process.cpp  quickwit_process.hpp
engine/server/web_server/: request_interceptor.hpp  secure_web_controller.hpp  swagger_component.hpp  web_component.hpp  web_controller.hpp  web_server.cpp  web_server.hpp
engine/server/web_server/controller/: ConfigController.hpp  CustomSwaggerController.hpp
engine/server/web_server/dto/: ConfigDtos.hpp  db_dto.hpp  dto.hpp  status_dto.hpp  swagger_info_dto.hpp
engine/server/web_server/handler/: fulltext_search_handler.hpp  web_request_handler.cpp  web_request_handler.hpp  worker_pool_stats_handler.hpp
engine/server/web_server/utils/: util.cpp  util.hpp
engine/services/: embedding_service.cpp  embedding_service.hpp
engine/test/: test_default_capacity.sh  test_initial_capacity.cpp
engine/test/api/: ci_api_test.py  comprehensive_api_test.py
engine/test/bindings/python/: concurrent_test.py  gist-960-euclidean.py  test.py
engine/test/concurrency/: test.py
engine/test/config/: config_system_test.cpp
engine/test/db/: data_safety_test.cpp
engine/test/engine/db/: ann_graph_segment_test.cpp  bug_fixes_regression_test.cpp  concurrent_hard_delete_test.cpp  config_advanced_test.cpp  config_test.cpp  db_server.cpp  hard_delete_test.cpp  sparse_vector.cpp  table_fulltext_integration_test.cpp  test_compaction.cpp  vector.cpp
engine/test/engine/server/: hybrid_search_test.cpp  quickwit_client_test.cpp  quickwit_manager_test.cpp
engine/test/engine/utils/: read_write_lock_test.cpp  status_test.cpp
engine/utils/: CMakeLists.txt  atomic_counter.cpp  atomic_counter.hpp  builder_suspend.cpp  builder_suspend.hpp  common_util.cpp  common_util.hpp  concurrent_bitset.cpp  concurrent_bitset.hpp  concurrent_hashmap.hpp  concurrent_map.hpp  concurrent_queue.hpp  concurrent_vector.hpp  constants.hpp  enhanced_error.hpp  error.hpp  error_handler.hpp  http_client.cpp  http_client.hpp  install_oatpp_modules.sh  json.cpp  json.hpp  memory_pool.hpp  optimized_lock_manager.hpp  optimized_logger.hpp  path_validator.hpp  production_logger.hpp  read_write_lock.cpp  read_write_lock.hpp  rebuild_logger.hpp  resource_guard.hpp  safe_file_io.hpp  safe_memory_ops.hpp  safe_string_utils.hpp  status.cpp  status.hpp  status_adapters.hpp  status_safe.hpp  status_utils.hpp
(+24 files in other folders)
